GNOME Bugzilla – Bug 754745
overlay scrollbar shouldn't hide when the slider is being grabbed
Last modified: 2015-09-16 17:15:52 UTC
If you grab the slider and move the pointer out of the scrollbar while holding the button down, the scrollbar gets hidden. The scrollbar should remain visible and continue working while the slider is grabbed wherever the pointer is, the hiding timeout should start after the grab release.
I guess what you are seeing is the inactivity fade-out kicking in. Are you not moving the mouse (after moving it outside) ?
Created attachment 311446 [details] [review] scrolledwindow: Set the scrollbar as "over" immediately during slider grabs Otherwise it's attempted through a timeout, which gets cancelled early after, and the slider disappears after a while with no mouse activity despite the ongoing implicit grab. Once the grab is finished, check_update_scrollbar_proximity() will be called again on both scrollbars, and the fade out animation will be triggered as a result.
Review of attachment 311446 [details] [review]: Works fine here
Attachment 311446 [details] pushed as 5b6360e - scrolledwindow: Set the scrollbar as "over" immediately during slider grabs